# AccessiClock

./: .gitignore  BRANCH_SETUP.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  MIGRATION.md  PROJECT_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.ps1  start.sh
.github/workflows/: build.yml  ci.yml
.memex/: context.md
accessibletalkingclock/: .gitignore  CHANGELOG  LICENSE  PHASE2_SUMMARY.md  README.md  README.rst  THREADING_FIXES.md  pyproject.toml  start.ps1  start.sh  test_audio_manual.py
accessibletalkingclock/src/accessibletalkingclock/: __main__.py  app.py  generate_sounds.py  soundpack.py
accessibletalkingclock/src/accessibletalkingclock/audio/: __init__.py  player.py
accessibletalkingclock/src/accessibletalkingclock/resources/sounds/: .gitkeep  ATTRIBUTIONS.md
accessibletalkingclock/tests/: conftest.py  test_audio_player.py  test_soundpack.py  test_soundpack_integration.py
docs/: wxpython-migration-parity-checklist.md
plans/2025-01-12_15-30-45_accessible-desktop-clock/: plan.md  tasks.md
plans/2025-10-16_phase-2-audio/: plan.md
plans/2025-10-16_phase-2-audio/tasks/: 2025-10-16_12-00-00_phase-2-audio.json
plans/2025-10-26_phase-3-soundpacks/: NVDA_TESTING_GUIDE.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE3_TASKS_5_6_SUMMARY.md  SOUND_RECOMMENDATIONS.md  plan.md
plans/2025-10-26_phase-3-soundpacks/tasks/: 2025-10-26_14-00-00_tasks-5-6.json  2025-10-26_15-00-00_phase3_implementation.json
scripts/: generate_sounds.py
soundpacks/default/: README.md
src/accessiclock/: __init__.py  __main__.py  app.py  audio.py  clock.py  constants.py  main.py  paths.py  soundpack.py  tts.py
src/accessiclock/audio/: __init__.py  player.py  tts_engine.py
src/accessiclock/clocks/default/: clock.json
src/accessiclock/clocks/digital/: clock.json
src/accessiclock/clocks/westminster/: clock.json
src/accessiclock/core/: __init__.py  logging_setup.py  settings.py  shortcuts.py
src/accessiclock/notifications/: __init__.py
src/accessiclock/services/: __init__.py  clock_pack_loader.py  clock_service.py
src/accessiclock/ui/: __init__.py  main_window.py
src/accessiclock/ui/dialogs/: __init__.py  clock_manager_dialog.py  settings_dialog.py
tests/: __init__.py  conftest.py  test_app.py  test_audio.py  test_audio_player.py  test_clock.py  test_clock_pack.py  test_clock_service.py  test_constants.py  test_paths.py  test_soundpack.py  test_tts.py  test_tts_engine.py
tests/core/: test_logging_scaffold.py  test_settings_scaffold.py  test_shortcuts_scaffold.py
